VPC.json
{
  "Description": "This template sets up a basic VPC",
  "Parameters": {
    "Project": {
      "Type": "String",
      "Default": "MyProject",
      "Description": "Enter a project name"
    },
    "Environment": {
      "Type": "String",
      "Default": "Development",
      "Description": "Describe the environment (e.g. development, production)"
    }
  },
  "Resources": {
    "BasicVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [{ "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "VPC" ] ] } }, { "Key": "Environment", "Value": { "Ref": "Environment" } }]
      }
    },
    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "BasicVPC" },
        "CidrBlock": "10.0.0.0/25",
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "PublicSubnet1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "Subnet", "Value": "Public" }
        ]
      }
    },
    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "BasicVPC" },
        "CidrBlock": "10.0.0.128/25",
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "PublicSubnet2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "Subnet", "Value": "Public" }
        ]
      }
    },
    "PrivateSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "BasicVPC" },
        "CidrBlock": "10.0.1.0/25",
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "PrivateSubnet1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "Subnet", "Value": "Private" }
        ]
      }
    },
    "PrivateSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "BasicVPC" },
        "CidrBlock": "10.0.1.128/25",
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "PrivateSubnet2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } },
          { "Key": "Subnet", "Value": "Private" }
        ]
      }
    },
    "BasicSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow SSH and Ping",
        "VpcId": { "Ref": "BasicVPC" },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "icmp",
            "FromPort": "-1",
            "ToPort": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 0,
            "ToPort": 65535,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [{ "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "IGW" ] ] } }, { "Key": "Environment", "Value": { "Ref": "Environment" } }]
      }
    },
    "InternetGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": { "Ref": "InternetGateway" },
        "VpcId": { "Ref": "BasicVPC" }
      }
    },
    "NATEIP1": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Tags": [{ "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "EIP1" ] ] } }, { "Key": "Environment", "Value": { "Ref": "Environment" } }]
      }
    },
    "NATGateway1": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": { "Fn::GetAtt": ["NATEIP1", "AllocationId"] },
        "SubnetId": { "Ref": "PublicSubnet1" },
        "Tags": [{ "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "NGW1" ] ] } }, { "Key": "Environment", "Value": { "Ref": "Environment" } }]
      }
    },
    "NATEIP2": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Tags": [{ "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "EIP2" ] ] } }, { "Key": "Environment", "Value": { "Ref": "Environment" } }]
      }
    },
    "NATGateway2": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": { "Fn::GetAtt": ["NATEIP2", "AllocationId"] },
        "SubnetId": { "Ref": "PublicSubnet2" },
        "Tags": [{ "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "NGW2" ] ] } }, { "Key": "Environment", "Value": { "Ref": "Environment" } }]
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "BasicVPC" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "PublicRouteTable" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } }
        ]
      }
    },
    "PublicRouteTableRoute1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "PublicRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "InternetGateway" }
      }
    },
    "PublicSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "PublicRouteTable" },
        "SubnetId": { "Ref": "PublicSubnet1" }
      }
    },
    "PublicSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "PublicRouteTable" },
        "SubnetId": { "Ref": "PublicSubnet2" }
      }
    },
    "PrivateRouteTable1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "BasicVPC" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "PrivateRouteTable1" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } }
        ]
      }
    },
    "PrivateRouteTable1Route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "PrivateRouteTable1" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATGateway1" }
      }
    },
    "PrivateRouteTable2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "BasicVPC" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Join" : [ "-", [{"Ref":"Project" }, "PrivateRouteTable2" ] ] } },
          { "Key": "Environment", "Value": { "Ref": "Environment" } }
        ]
      }
    },
    "PrivateRouteTable2Route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "PrivateRouteTable2" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATGateway2" }
      }
    },
    "PrivateSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "PrivateRouteTable1" },
        "SubnetId": { "Ref": "PrivateSubnet1" }
      }
    },
    "PrivateSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "PrivateRouteTable2" },
        "SubnetId": { "Ref": "PrivateSubnet2" }
      }
    }
  },
  "Outputs": {
    "VpcId": { "Value": { "Ref": "BasicVPC" } }
  }
}
